<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tab_movie"
        android:title="@string/movies"
        android:icon="@drawable/ic_movie"/>
    <item
        android:id="@+id/tab_tvshow"
        android:title="@string/tv_show"
        android:icon="@drawable/ic_tv_show"/>
    <item
        android:id="@+id/tab_favorite"
        android:title="@string/my_favorite"
        android:icon="@drawable/ic_favorite"/>
</menu>