<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv show</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie_title">Movie title</string>
    <string name="movie_release">Release ● </string>
    <string name="dot">●</string>
    <string name="movie_genre">Genre ● </string>
    <string name="movie_duration">Duration ● </string>
    <string name="movie_description">Description</string>
    <string name="movie_rating_age">Rating</string>
    <string name="favorite_type">Type</string>
    <string name="my_favorite">My Favorite</string>
    <string name="click_to_add_favorite">Click to add favorite</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="tv_show_season">Season </string>
    <string name="show_year">Year ● </string>
    <string name="tv_show_episode">Episodes</string>
    <string name="title_activity_detail_tvshow">TV Show</string>
    <string name="share_title">Bagikan film ini sekarang.</string>
    <string name="share_text">Hai guys. Ini film rekomendasi ku buat kamu. %s.</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fav_movies">My Movies</string>
    <string name="fav_tv_show">My TV Show</string>
    <string name="search_title">Search</string>
    <string name="find_not_found">No Item like %s found</string>
    <string name="option_refresh">Refresh</string>
</resources>